--- a/src/Tort/Views/index.html
+++ b/src/Tort/Views/index.html
@@ -162,6 +162,8 @@
 
 </head>
 <body>
+    <a href="socket.html">SOCKET</a>
+    <hr />
     <input type="text" id="emailInput" value="user1" />
     <input type="text" id="passwordInput" value="p" />
     <button onclick="login()">Login</button>
